--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
   <body>
     <h1>Hello world</h1>
     <h3>Welcome to my world.</h3>
+
+    <script type="text/javascript" src="js/alert.js"></script>
   </body>
 </html>
