--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
     <h3>Welcome to my world.</h3>
 
     <script type="text/javascript" src="js/alert.js"></script>
+    <script type="text/javascript" src="js/consoleLog.js"></script>
   </body>
 </html>
