--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <h1>Hello world</h1>
     <h3>Welcome to my world.</h3>
 
-    <script type="text/javascript" src="js/alert.js"></script>
-    <script type="text/javascript" src="js/consoleLog.js"></script>
+    <script type="text/javascript" src="js/console.js"></script>
   </body>
 </html>
